--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
   id 'java'
   id 'application'
+  id 'org.springframework.boot' version '2.0.9.RELEASE'
 //  id 'com.github.johnrengelman.shadow' version '1.2.3'
 }
 
@@ -11,12 +12,31 @@ repositories {
 version = '3.7.0'
 sourceCompatibility = '1.8'
 
+
 dependencies {
   compile "io.vertx:vertx-core:$version"
   compile "io.vertx:vertx-web:$version"
   compile "com.google.code.gson:gson:2.8.5"
   compile "io.rest-assured:rest-assured:4.0.0"
   compile "io.projectreactor:reactor-core:3.2.5.RELEASE"
-}
+  compile "org.springframework.boot:spring-boot-gradle-plugin:2.0.9.RELEASE"
+  compile "org.springframework.boot:spring-boot-starter-web:2.0.9.RELEASE"
+  compile "org.springframework.boot:spring-boot-autoconfigure:2.0.9.RELEASE"
+  compile "org.springframework.boot:spring-boot-starter-parent:2.0.9.RELEASE"
+  compile "org.springframework.boot:spring-boot-dependencies:2.0.9.RELEASE"
+  
+  testCompile "org.springframework.boot:spring-boot-starter-test:2.0.9.RELEASE"
 
-mainClassName = 'io.vertx.example.HelloWorldEmbedded'
+  
+  testCompile 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+testCompile 'org.mockito:mockito-junit-jupiter:2.23.0'
+  testCompile 'org.junit:junit:5.12'
+testCompile 'org.mockito:mockito-core:2.22.0'
+}
+test {
+    useJUnitPlatform()
+}
+mainClassName = 'io.vertx.example.JavaExerciseBoot'
+
+
+
